# powerflow-pipeline

./: .gitignore  CLAUDE.md  PreprocessingSpecV2Step1-Implementation.md  PreprocessingSpecV2Step1.md  README.md  prefect.yaml  pyproject.toml  spec
System Design Spec/: Preprocessing.md  preprocessing-manual-v1.md  preprocessing-spec-v1.md  preprocessing-spec-v2.md
docs/specs/preprocessing/: 2-cut.md  4-retilt.md  5-scaling.md  6-cropping.md
docs/superpowers/plans/: 2026-07-14-odometry-authoritative-cut.md
docs/superpowers/specs/: 2026-07-14-odometry-authoritative-cut-design.md
src/powerflow_pipeline/data/: cli.py
src/powerflow_pipeline/data/common/: __init__.py  context.py  discovery.py  errors.py  filesystem.py  manifest.py  models.py  task_logging.py
src/powerflow_pipeline/data/core/: __init__.py  context.py  discovery.py  filesystem.py  manifest.py  models.py  runner.py
src/powerflow_pipeline/data/dummy/: __init__.py  config.py  pipeline.py
src/powerflow_pipeline/data/preprocess/: __init__.py  config.py  flow.py  geometry.py  models.py  timeline.py
tests/: conftest.py
tests/integration/: conftest.py  test_dummy_pipeline.py  test_prefect_spine.py  test_preprocess_flow.py
tests/unit/: test_cli.py  test_common_discovery.py  test_common_filesystem.py  test_common_manifest.py  test_common_models.py  test_core_models.py  test_preprocess_cut.py  test_preprocess_discovery.py  test_preprocess_geometry.py  test_preprocess_ingest.py  test_preprocess_metadata.py  test_preprocess_orient.py  test_preprocess_timeline.py
(+10 files in other folders)
