[project]
name = "powerflow-pipeline"
version = "0.1.0"
description = "PowerFlow data and training pipelines"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=2.1",
    "opencv-contrib-python>=4.10",
    "av>=13.1",
    "scipy>=1.14",
    "pandas>=2.2",
    "pydantic>=2.9",
    "typer>=0.12",
    "tqdm>=4.66",
    "torch>=2.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
powerflow = "powerflow_pipeline.data.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/powerflow_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=powerflow_pipeline --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["src/powerflow_pipeline"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "NPY", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

# Third-party packages that ship no type stubs.
[[tool.mypy.overrides]]
module = ["cv2.*", "av.*", "scipy.*"]
ignore_missing_imports = true
